# simplearrayhash

./: Cargo.toml  README.md
bench/: Cargo.toml  README.md
bench/benches/: search.rs
src/: lib.rs  map.rs  set.rs
